# nikkei-linux-2024-01-multimodal

./: .gitignore  README.md  create_instructions.py  create_synthdata.py  finetune_task_lora.sh  pyproject.toml  segmentation.py
multimodal_sft/: instruction_utils.py  utils.py
notebooks/: segment_test.npy  synth_all.ipynb  synthesis_experiment.ipynb
