[tool.poetry]
name = "multimodal_sft"
version = "0.1.0"
description = ""
authors = ["aRySt0cat <ryuta.academic@gmail.com>"]
readme = "README.md"
packages = [
    { include = "multimodal_sft", from = "." },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
opencv-python = "^4.8.1.78"
numpy = "^1.26.1"
notebook = "^7.0.6"
matplotlib = "^3.8.1"
pillow = "^10.1.0"
pandas = "^2.1.2"
langchain = "^0.0.330"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
